[project]
name = "pyramids-gis"
version = "0.13.0"
description = "GIS utility package"
readme = {file = "README.md", content-type = "text/markdown"}
authors = [
    { name = "Mostafa Farrag", email = "moah.farag@gmail.com" }
]
license = {text = "GNU General Public License v3"}
keywords = ["GIS", "gdal"]

classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: GIS",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
]

requires-python = ">= 3.11, <4"

dependencies = [
    # GDAL is NOT listed as a pip dep: it's vendored into the wheel
    # (see src/pyramids/_vendor/osgeo/ after build). conda-forge users
    # still get GDAL via conda dependency in the feedstock.
    "geopandas >=1.0.0",
    "hpc-utils >=0.1.5",
    "numpy >=2.0.0",
    "pandas >=2.0.0",
    "pyproj >=3.7.0",
    "PyYAML >=6.0.0",
    "Shapely >=2.0.0",
    "scipy >=1.10.0",
]

[project.optional-dependencies]
viz = ["cleopatra>=0.7.1", "mercantile>=1.2.0", "xyzservices>=2024.4.0", "Pillow>=9.0.0"]
xarray = ["xarray>=2023.1.0", "netCDF4>=1.6.0", "h5netcdf>=1.0.0", "cftime>=1.6.0"]

[dependency-groups]
dev = [
    "nbval >=0.11.0",
    "pre-commit >=3.7.1",
    "pre-commit-hooks >=4.6.0",
    "pytest >=8.2.2",
    "pytest-cov >= 5.0.0",
    "pytest-env>=1.6.0",
    "coverage",
    "build>=1.0.0",
    "twine>=5.0.0",
    "pip",
    "jupyterlab",
    "notebook",
    "jupyter",
    "commitizen>=4.8.4",
    "mypy>=1.10.0",
    "types-PyYAML>=6.0.0",
    "pytest-mock>=3.12.0"
]
docs = [
    "mkdocs >=1.5.3",
    "mkdocs-material >=9.5.3",
    "mkdocstrings >=0.24.0",
    "mkdocstrings-python >=1.7.5",
    "mike >=2.1.3",
    "mkdocs-jupyter >=0.25.1",
    "mkdocs-autorefs  >=1.2",
    "mkdocs-macros-plugin  >=1.3.7",
    "mkdocs-table-reader-plugin  >=3.1.0",
    "mkdocs-mermaid2-plugin  >=1.2.1",
    "jupyter-contrib-nbextensions  >=0.7.0",
    "mkdocs-panzoom-plugin",
    "notebook<7.0",
]
notebook = [
    "pip",
    "jupyterlab",
    "notebook",
    "jupyter",
    "ipykernel"
]


[project.urls]
homepage = "https://github.com/serapeum-org/pyramids"
repository = "https://github.com/serapeum-org/pyramids"
documentation = "https://serapeum-org.github.io/pyramids"
Changelog = "https://github.com/serapeum-org/pyramids/blob/main/docs/change-log.md"


[build-system]
requires = ["setuptools>=80.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]

[tool.setuptools.packages.find]
where = ["src"]
include = ["pyramids", "pyramids.*"]

[tool.setuptools.package-data]
pyramids = [
    "**/*.yaml",
    "_vendor/osgeo/**/*",
    "_vendor/osgeo_utils/**/*",
    "_data/gdal_data/*",
    "_data/proj_data/*",
]

[tool.flake8]
ignore = ["E203", "E266", "E501", "W503", "E722", "C901", "E741", "E731"]
max-line-length = 88
max-complexity = 18
select = "B,C,E,F,W,T4"

[tool.black]
profile = "flake8"
line-length = 88
skip-string-normalization = true

[tool.isort]
profile = "black"
line_length = 88
multi_line_output = 3

[tool.bandit]
exclude_dirs = ["tests", "examples", "scripts", "planning", "docs"]
skips = ["B101"]

[tool.coverage.run]
branch = true
source = ["src/pyramids"]

[tool.coverage.report]
show_missing = true
fail_under = 90

[tool.mypy]
python_version = "3.11"
mypy_path = "src"
packages = ["pyramids"]
explicit_package_bases = true
warn_return_any = true
warn_unused_configs = false
disallow_untyped_defs = false
check_untyped_defs = true
ignore_missing_imports = true
exclude = [
    "tests/",
    "examples/",
    "docs/",
    "scripts/",
    "planning/",
]

[[tool.mypy.overrides]]
module = "pyramids.dataset.ops.*"
disable_error_code = [
    "attr-defined", "call-arg", "misc", "return-value",
    "assignment", "union-attr", "no-any-return", "arg-type",
]

[tool.commitizen]
name = "cz_conventional_commits"
version_provider = "pep621"
tag_format = "$version"
changelog_file = "docs/change-log.md"
update_changelog_on_bump = true
style = [
    ["qmark", "fg:#ff9d00 bold"],
    ["question", "bold"],
    ["answer", "fg:#ff9d00 bold"],
    ["pointer", "fg:#ff9d00 bold"],
    ["highlighted", "fg:#ff9d00 bold"],
    ["selected", "fg:#cc5454"],
    ["separator", "fg:#cc5454"],
    ["instruction", ""],
    ["text", ""],
    ["disabled", "fg:#858585 italic"]
]

[tool.pytest.ini_options]
env = ["MPLBACKEND=Agg"]
pythonpath = ["src"]
testpaths = ["tests"]
markers = [
    "vfs: mark a test as a virtual file system (deselect with '-m \"not vfs\"')",
    "slow: mark test as slow (deselect with '-m \"not slow\"')",
    "fast: mark test as fast (deselect with '-m \"not fast\"')",
    "plot: test plotting function optional package (deselect with '-m \"not plot\"')",
    "xarray: tests requiring xarray with NetCDF backend (deselect with '-m \"not xarray\"')"
]


[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["win-64", "linux-64", "osx-arm64"]

[tool.pixi.pypi-dependencies]
pyramids-gis = { path = ".", editable = true }

[tool.pixi.tasks]
main = { cmd = "pytest -vvv --cov=src/pyramids -sv -m 'not plot and not xarray' --cov-report=xml", description = "Run the main test suite" }
plot = { cmd = "pytest -vvv --cov=src/pyramids --cov-append -sv -m 'plot' --cov-report=xml", description = "Run plot test suite" }
xarray-tests = { cmd = "pytest -vvv --cov=src/pyramids --cov-append -sv -m 'xarray' --cov-report=xml", description = "Run xarray interop tests" }
test-all = { cmd = "pytest -vvv --cov=src/pyramids -sv --cov-report=xml --cov-report=term-missing", description = "Run all testsuite" }
notebooks = { cmd = "pytest --nbval --nbval-lax --verbose docs/examples", description = "check notebooks" }
jupyter = { cmd = "jupyter lab --no-browser --IdentityProvider.token='' --ServerApp.password='' --port=8889", description = "check notebooks" }
build-dist = { cmd = "python -m build", description = "Build sdist and wheel for PyPI" }
publish-pypi = { cmd = "twine upload --non-interactive --repository pypi dist/*", depends-on = ["build-dist"], description = "Build and upload package to PyPI" }
cz-changelog = { cmd = "cz changelog", description = "Generate changelog using Commitizen" }
cz-bump = { cmd = "cz bump", description = "Bump version using Commitizen" }
mypy = { cmd = "mypy", description = "Run mypy type checking" }


[tool.pixi.environments]
default = {features = ["viz"], solve-group = "default" }
dev = { features = ["viz", "dev", "xarray"], solve-group = "default" }
notebook = { features = ["viz", "notebook"], solve-group = "default" }
docs = { features = ["docs"], solve-group = "docs" }
py311 = { features = ["py311", "viz", "dev", "xarray"], solve-group = "py311" }
py312 = { features = ["py312", "viz", "dev", "xarray"], solve-group = "py312" }
py313 = { features = ["py313", "viz", "dev", "xarray"], solve-group = "py313" }
py314 = { features = ["py314", "viz", "dev", "xarray"], solve-group = "py314" }
# wheel-build: minimal env used inside the cibuildwheel container to
# obtain GDAL + native deps as conda-forge binaries. Kept separate from
# dev so it stays lean (no pytest, docs tooling, etc.). Uses
# `no-default-feature = true` so we DON'T pull in pyramids-gis itself
# (which would drag in pandas/numpy wheels that may not be manylinux2014
# compatible). See planning/bundle/option-1-implementation-plan.md.
wheel-build = { features = ["wheel-build"], solve-group = "wheel-build", no-default-feature = true }


[tool.pixi.feature.py311.dependencies]
python = "3.11.*"
[tool.pixi.feature.py312.dependencies]
python = "3.12.*"
[tool.pixi.feature.py313.dependencies]
python = "3.13.*"
[tool.pixi.feature.py314.dependencies]
python = "3.14.*"

[tool.pixi.feature.dev.dependencies]
scipy = ">=1.17.1,<2"

# ---------------------------------------------------------------------------
# wheel-build feature: native deps we need inside the cibuildwheel container.
# Deliberately pinned tighter than the runtime [tool.pixi.dependencies] block
# because the SWIG Python bindings are version-locked to libgdal. Keep
# GDAL_VERSION in the cibuildwheel environment aligned with what conda-forge
# delivers for these pins.
# ---------------------------------------------------------------------------
[tool.pixi.feature.wheel-build.dependencies]
gdal = ">=3.12,<3.13"
libgdal-netcdf = ">=3.12,<3.13"
libgdal-hdf4 = ">=3.12,<3.13"
swig = ">=4.3,<5"

# libstdcxx-ng is Linux-only — provides libstdc++.so.6 built by
# conda-forge's newer GCC. conda-forge's GDAL references GLIBCXX_3.4.32
# (GCC 13+), which isn't in the default manylinux_2_28 libstdc++. See
# planning/bundle/option-1-implementation-plan.md Task 1.10.
[tool.pixi.feature.wheel-build.target.linux-64.dependencies]
libstdcxx-ng = "*"

[tool.pixi.dependencies]
gdal = ">=3.10.0,<4"
libgdal-netcdf = ">=3.10.0,<4"
libgdal-hdf4 = ">=3.10.0,<4"


# ---------------------------------------------------------------------------
# cibuildwheel: platform wheel builds with bundled GDAL
# ---------------------------------------------------------------------------
[tool.cibuildwheel]
skip = ["*pp*", "*musllinux*", "cp310-*", "cp39-*", "cp38-*", "cp314t-*"]
archs = ["auto64"]
build-verbosity = 3
# NOTE: CIBW_TEST_SKIP = "*" is a temporary Phase 1 workaround. The wheel
# is tagged manylinux_2_39 but the manylinux_2_28 build container can't
# install it (glibc baseline too old). Proper testing happens outside
# cibuildwheel via wheel-test.yml (Phase 3 / Task 3.1).
test-skip = "*"

[tool.cibuildwheel.linux]
# manylinux_2_28 == glibc 2.28; covers Ubuntu 20.04+, RHEL 8+, Debian 11+.
# We use 2_28 instead of 2014 because conda-forge's GDAL binaries link
# to glibc symbols newer than 2.17. See auditwheel output on first build.
manylinux-x86_64-image = "manylinux_2_28"
# CIBW_BEFORE_ALL runs ONCE per platform (shared across Python versions).
# Installs pixi, runs pixi install -e wheel-build, extracts conda-forge
# binaries into /usr/local.
before-all = [
    "bash ./ci/setup-gdal-from-pixi.sh",
]
# CIBW_BEFORE_BUILD runs per Python version. Builds the GDAL SWIG Python
# bindings for the target interpreter, then vendors osgeo/ and
# GDAL_DATA/PROJ_DATA into the pyramids source tree so setuptools
# includes them in the wheel.
before-build = [
    "pip install --upgrade pip setuptools wheel numpy",
    "python ./ci/install-and-vendor-osgeo.py",
]
# Linux wheel repair: auditwheel walks the .so dep graph, bundles
# libgdal and all transitive native deps into pyramids_gis.libs/,
# and patches RPATH so the extensions find their bundled libs at runtime.
#
# auditwheel --plat manylinux_2_39_x86_64 (glibc 2.39, Ubuntu 24.04+)
# because conda-forge's GDAL is compiled with GCC 13, which references
# GLIBCXX_3.4.32. The manylinux_2_28 image itself is fine as a BUILD
# environment; the output wheel's compatibility tag just reflects the
# newer symbols bundled inside. Tighten this as conda-forge releases
# packages compiled with older GCC.
repair-wheel-command = [
    "LD_LIBRARY_PATH=/usr/local/lib:/usr/local/lib64 auditwheel repair --plat manylinux_2_39_x86_64 -w {dest_dir} {wheel}",
]

[tool.cibuildwheel.linux.environment]
# GDAL_VERSION must match the version conda-forge ships for the pin in
# [tool.pixi.feature.wheel-build.dependencies]. Currently GDAL 3.12.3.
GDAL_VERSION = "3.12.3"
BUILD_PREFIX = "/usr/local"
GDAL_DATA = "/usr/local/share/gdal"
PROJ_DATA = "/usr/local/share/proj"
PROJ_LIB = "/usr/local/share/proj"
PACKAGE_DATA = "1"
LD_LIBRARY_PATH = "/usr/local/lib:/usr/local/lib64"
PIXI_NO_PATH_UPDATE = "1"
