[project]
name = "pyramids-gis"
version = "0.14.0"
description = "GIS utility package"
readme = {file = "README.md", content-type = "text/markdown"}
authors = [
    { name = "Mostafa Farrag", email = "moah.farag@gmail.com" }
]
license = {text = "GNU General Public License v3"}
keywords = ["GIS", "gdal"]

classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: GIS",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
]

requires-python = ">= 3.11, <4"

dependencies = [
    "GDAL >=3.10.0,<4",
    "geopandas >=1.0.0",
    "hpc-utils >=0.1.5",
    "numpy >=2.0.0",
    "pandas >=2.0.0",
    "pyproj >=3.7.0",
    "PyYAML >=6.0.0",
    "Shapely >=2.0.0",
    "scipy >=1.10.0",
]

[project.optional-dependencies]
viz = ["cleopatra>=0.7.1", "mercantile>=1.2.0", "xyzservices>=2024.4.0", "Pillow>=9.0.0"]
lazy = ["dask[array]>=2024.1.0", "distributed>=2024.1.0", "zarr>=2.17.0,<3", "fsspec>=2024.1.0"]
xarray = ["xarray>=2023.1.0", "netCDF4>=1.6.0", "h5netcdf>=1.0.0", "cftime>=1.6.0"]
netcdf-lazy = ["pyramids-gis[lazy,xarray]", "kerchunk>=0.2.6"]
parquet = ["pyarrow>=10.0.0"]
parquet-lazy = ["pyramids-gis[lazy,parquet]", "dask-geopandas>=0.5.0"]
stac = ["pystac>=1.10", "odc-geo>=0.5.1"]
zonal = ["exactextract>=0.2.1"]

[dependency-groups]
dev = [
    "nbval >=0.11.0",
    "pre-commit >=3.7.1",
    "pre-commit-hooks >=4.6.0",
    "pytest >=8.2.2",
    "pytest-cov >= 5.0.0",
    "pytest-env>=1.6.0",
    "coverage",
    "build>=1.0.0",
    "twine>=5.0.0",
    "pip",
    "jupyterlab",
    "notebook",
    "jupyter",
    "commitizen>=4.8.4",
    "mypy>=1.10.0",
    "types-PyYAML>=6.0.0",
    "pytest-mock>=3.12.0"
]
docs = [
    "mkdocs >=1.5.3",
    "mkdocs-material >=9.5.3",
    "mkdocstrings >=0.24.0",
    "mkdocstrings-python >=1.7.5",
    "mike >=2.1.3",
    "mkdocs-jupyter >=0.25.1",
    "mkdocs-autorefs  >=1.2",
    "mkdocs-macros-plugin  >=1.3.7",
    "mkdocs-table-reader-plugin  >=3.1.0",
    "mkdocs-mermaid2-plugin  >=1.2.1",
    "jupyter-contrib-nbextensions  >=0.7.0",
    "mkdocs-panzoom-plugin",
    "notebook<7.0",
]
notebook = [
    "pip",
    "jupyterlab",
    "notebook",
    "jupyter",
    "ipykernel"
]


[project.urls]
homepage = "https://github.com/serapeum-org/pyramids"
repository = "https://github.com/serapeum-org/pyramids"
documentation = "https://serapeum-org.github.io/pyramids"
Changelog = "https://github.com/serapeum-org/pyramids/blob/main/docs/change-log.md"


[build-system]
requires = ["setuptools>=80.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project.entry-points."xarray.backends"]
pyramids = "pyramids.netcdf._xarray_backend:PyramidsBackendEntrypoint"

[tool.setuptools]

[tool.setuptools.packages.find]
where = ["src"]
include = ["pyramids", "pyramids.*"]

[tool.setuptools.package-data]
pyramids = ["base/data/*.yaml"]

[tool.flake8]
ignore = ["E203", "E266", "E501", "W503", "E722", "C901", "E741", "E731"]
max-line-length = 88
max-complexity = 18
select = "B,C,E,F,W,T4"

[tool.black]
profile = "flake8"
line-length = 88
skip-string-normalization = true

[tool.isort]
profile = "black"
line_length = 88
multi_line_output = 3

[tool.bandit]
exclude_dirs = ["tests", "examples", "scripts", "planning", "docs"]
skips = ["B101"]

[tool.coverage.run]
branch = true
source = ["src/pyramids"]

[tool.coverage.report]
show_missing = true
fail_under = 90

[tool.mypy]
python_version = "3.11"
mypy_path = "src"
packages = ["pyramids"]
explicit_package_bases = true
warn_return_any = true
warn_unused_configs = false
disallow_untyped_defs = false
check_untyped_defs = true
ignore_missing_imports = true
exclude = [
    "tests/",
    "examples/",
    "docs/",
    "scripts/",
    "planning/",
]

[[tool.mypy.overrides]]
module = "pyramids.dataset.ops.*"
disable_error_code = [
    "attr-defined", "call-arg", "misc", "return-value",
    "assignment", "union-attr", "no-any-return", "arg-type",
]

[tool.commitizen]
name = "cz_conventional_commits"
version_provider = "pep621"
tag_format = "$version"
changelog_file = "docs/change-log.md"
update_changelog_on_bump = true
style = [
    ["qmark", "fg:#ff9d00 bold"],
    ["question", "bold"],
    ["answer", "fg:#ff9d00 bold"],
    ["pointer", "fg:#ff9d00 bold"],
    ["highlighted", "fg:#ff9d00 bold"],
    ["selected", "fg:#cc5454"],
    ["separator", "fg:#cc5454"],
    ["instruction", ""],
    ["text", ""],
    ["disabled", "fg:#858585 italic"]
]

[tool.pytest.ini_options]
env = ["MPLBACKEND=Agg"]
pythonpath = ["src"]
testpaths = ["tests"]
markers = [
    "vfs: mark a test as a virtual file system (deselect with '-m \"not vfs\"')",
    "slow: mark test as slow (deselect with '-m \"not slow\"')",
    "fast: mark test as fast (deselect with '-m \"not fast\"')",
    "plot: test plotting function optional package (deselect with '-m \"not plot\"')",
    "xarray: tests requiring xarray with NetCDF backend (deselect with '-m \"not xarray\"')"
]


[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["win-64", "linux-64", "osx-arm64"]

[tool.pixi.pypi-dependencies]
pyramids-gis = { path = ".", editable = true }

[tool.pixi.tasks]
main = { cmd = "pytest -vvv --cov=src/pyramids -sv -m 'not plot and not xarray' --cov-report=xml", description = "Run the main test suite" }
plot = { cmd = "pytest -vvv --cov=src/pyramids --cov-append -sv -m 'plot' --cov-report=xml", description = "Run plot test suite" }
xarray-tests = { cmd = "pytest -vvv --cov=src/pyramids --cov-append -sv -m 'xarray' --cov-report=xml", description = "Run xarray interop tests" }
test-all = { cmd = "pytest -vvv --cov=src/pyramids -sv --cov-report=xml --cov-report=term-missing", description = "Run all testsuite" }
notebooks = { cmd = "pytest --nbval --nbval-lax --verbose docs/examples", description = "check notebooks" }
jupyter = { cmd = "jupyter lab --no-browser --IdentityProvider.token='' --ServerApp.password='' --port=8889", description = "check notebooks" }
build-dist = { cmd = "python -m build", description = "Build sdist and wheel for PyPI" }
publish-pypi = { cmd = "twine upload --non-interactive --repository pypi dist/*", depends-on = ["build-dist"], description = "Build and upload package to PyPI" }
cz-changelog = { cmd = "cz changelog", description = "Generate changelog using Commitizen" }
cz-bump = { cmd = "cz bump", description = "Bump version using Commitizen" }
mypy = { cmd = "mypy", description = "Run mypy type checking" }


[tool.pixi.environments]
default = {features = ["viz"], solve-group = "default" }
dev = { features = ["viz", "dev", "xarray", "lazy"], solve-group = "default" }
notebook = { features = ["viz", "notebook"], solve-group = "default" }
docs = { features = ["docs"], solve-group = "docs" }
py311 = { features = ["py311", "viz", "dev", "xarray", "lazy"], solve-group = "py311" }
py312 = { features = ["py312", "viz", "dev", "xarray", "lazy"], solve-group = "py312" }
py313 = { features = ["py313", "viz", "dev", "xarray", "lazy"], solve-group = "py313" }
py314 = { features = ["py314", "viz", "dev", "xarray", "lazy"], solve-group = "py314" }


[tool.pixi.feature.py311.dependencies]
python = "3.11.*"
[tool.pixi.feature.py312.dependencies]
python = "3.12.*"
[tool.pixi.feature.py313.dependencies]
python = "3.13.*"
[tool.pixi.feature.py314.dependencies]
python = "3.14.*"

[tool.pixi.feature.dev.dependencies]
scipy = ">=1.17.1,<2"

[tool.pixi.dependencies]
gdal = ">=3.10.0,<4"
libgdal-netcdf = ">=3.10.0,<4"
libgdal-hdf4 = ">=3.10.0,<4"
